--- a/movie.scss
+++ b/movie.scss
@@ -15,7 +15,7 @@ $bgcolor: #1e90ff;
     overflow: hidden;
     text-align: center;
     padding:10px;
-}
+    margin-right:0px;}
 
 /* Style for the navigation links */
 
@@ -56,6 +56,7 @@ $bgcolor: #1e90ff;
     font-size: 14px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-top: 5px;
+    margin-right:0px;
 }
 
 /*Code for avengers*/
@@ -68,12 +69,7 @@ $bgcolor: #1e90ff;
     margin-left: 250px;
     background-color: white;
     float: left;
-    @media all and (min-width: 1280px) {
-      .avengers {
-       width:50%;
-       margin-left: 0;
-      }
-    }
+    
 }
 .avengers:after {
     content: "";
@@ -117,15 +113,11 @@ $bgcolor: #1e90ff;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: repeat(2, 190px);
-    max-width: 500px;
+    width: 50%;
     grid-gap: 10px; /*Creates gap between grid items. */
-    height: calc(100vh - 100px);
+    height: 100%; /* Remove position: absolute */
     align-self: center;
-    position: relative;
-  top: 0;
-  left: 1%;
-  width: 50%;
-  height: 100%;
+    padding-left: 10px;
   }
   .grid-container:after {
     content: "";
@@ -164,16 +156,100 @@ $bgcolor: #1e90ff;
 .grid-item .info2 {
     @extend .info;
     position: absolute;
-        bottom: 0;
-        right: 0;
+    bottom: 0;
+    right: 0;
 }
 
 
 footer {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-     text-align: center;
+  flex: 0;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+  @media screen and (max-width: 480px) {
+    .grid-container {
+      width: 100%;
+      margin-left: 0px;
+      grid-template-columns: repeat(1, 300px);
+      padding-left: 10px;
+      padding-top: 10px;
+    }
+    .avengers{
+      width: 460px;
+      margin-left: 10px;
+    }
+    .grid-item{
+      width:460px;
+
+    }
+    .search-input{
+      display: none;
+    }
+  }
+
+  @media screen and (max-width:800px) and (min-width: 481px){
+    .grid-container {
+      width: 100%;
+      margin-left: 0px;
+      grid-template-columns: repeat(2, 380px);
+      margin-left: 2px;
+      padding-top: 10px;
+      gap: 20px;
+    }
+    .avengers{
+      width: 780px;
+      margin-left: 10px;
+    }
+    .navbar .register{
+      padding-right:0px;
+    }
+    .search-input{
+      display: none;
+    }
+  }
+
+  @media screen and (max-width:1024px) and (min-width: 801px){
+    .big-container{
+      display: flex;
+      flex-direction: row;
+    }
+    .grid-container {
+      flex-direction: 1;
+      width: 400px;
+      position: relative;
+      margin-left: 0px;
+      grid-template-columns: repeat(1, 440px);
+      top:0px;
+      right: 0;
+      gap: 10px;
+
+      }
+    .avengers{
+      width: 560px;
+      margin-left: 10px;
+      float: left;
+      height: 640px;
+    }
+    .grid-container .grid-item{
+      float: left;
+    }
+    .navbar{
+      margin-right: -10px;
+    }
+
+  }
+
+  @media screen and (max-width:1280px) and (min-width: 1025px){
+    .avengers{
+      margin-left: 10px;
+      width:45%;
+    }
+    .grid-container{
+      grid-template-columns: repeat(2, 330px);
+    }
+    .navbar .register{
+      padding-right: 10px;
+    }
   }
