--- a/Task 3/task3.css
+++ b/Task 3/task3.css
@@ -1,3 +1,4 @@
+/*Create variables*/
 * {
   padding: 0;
   margin: 0;
@@ -8,6 +9,7 @@ html {
 }
 
 /* Center elements using a mixin */
+/*Header Styling*/
 header {
   background-color: #8ccff7;
   width: 100%;
@@ -21,18 +23,21 @@ body {
   min-height: 100vh;
 }
 
+/*Styling for footer*/
 footer {
   background-color: #8ccff7;
   height: 50px;
 }
 
+/*Styles for Row container*/
 .row_container {
   margin-top: 40px;
   display: grid;
   grid-template-rows: repeat(4, 1fr);
 }
 
-.row1:hover, .row2:hover, .row3:hover, .row4:hover {
+/*Individual Rows styling*/
+.row1:hover, .row2:hover, .row3:hover, .row4:hover { /*Hover effect*/
   background-color: #444;
 }
 
@@ -56,10 +61,10 @@ footer {
   background-color: #ffa372;
 }
 
-/* Circles and rows styling */
+/* Circles styling */
 .circle_container {
   grid-template-rows: 1fr;
-  padding: 10px;
+  padding: 75px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,6 +105,7 @@ footer {
   background-color: #ffa372;
 }
 
+/*Create a mixin for image in the header*/
 @media (max-width: 480px) {
   header {
     background-image: url("https://via.placeholder.com/200");
@@ -125,10 +131,12 @@ footer {
     background-repeat: no-repeat;
   }
 }
+/*Another media query for the circles*/
 @media screen and (max-width: 620px) {
   .circle_container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
   }
 }/*# sourceMappingURL=task3.css.map */
